--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <meta charset="UTF-8">
 <title>PDV Barbearia</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
 body{
   margin:0;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family:Arial,Helvetica,sans-serif;
   background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");
   background-size:cover;
   background-position:center;
@@ -31,47 +30,46 @@ input,select,button{padding:10px;border-radius:6px;border:none;margin:4px 0}
 button{cursor:pointer;font-weight:bold}
 table{width:100%;border-collapse:collapse}
 th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
-.total{font-size:24px;color:#2ecc71;margin-top:10px}
-.search{width:100%}
+.total{font-size:22px;color:#2ecc71}
+.negativo{color:#e74c3c}
 </style>
 </head>
 
 <body>
 <div class="overlay">
 
-<!-- MENU -->
 <div class="menu">
   <button onclick="show('pdv')">💈</button>
   <button onclick="show('clientes')">👤</button>
   <button onclick="show('planos')">💳</button>
-  <button onclick="show('agenda')">📅</button>
   <button onclick="show('estoque')">📦</button>
   <button onclick="show('despesas')">🧾</button>
-  <button onclick="show('historico')">📊</button>
+  <button onclick="show('financeiro')">📊</button>
 </div>
 
 <div class="content">
 
 <!-- PDV -->
 <div id="pdv" class="section active">
-  <h2>PDV</h2>
-  <input class="search" placeholder="🔍 Pesquisar cliente" onkeyup="filtrarClientes(this.value)">
+  <h2>PDV / Caixa</h2>
+  <p id="statusCaixa"></p>
+
   <select id="cliente"></select>
-
-  <input class="search" placeholder="🔍 Pesquisar produto/serviço" onkeyup="filtrarProdutos(this.value)">
   <select id="produto"></select>
-
   <button onclick="addCarrinho()">Adicionar</button>
+
   <table id="carrinho"></table>
-  <div class="total">Total: R$ <span id="total">0.00</span></div>
+  <p class="total">Total: R$ <span id="total">0.00</span></p>
 
   <button onclick="finalizarVenda()">Finalizar Venda</button>
+  <button onclick="abrirCaixa()">🔓 Abrir Caixa</button>
+  <button onclick="fecharCaixa()">🔒 Fechar Caixa</button>
 </div>
 
 <!-- CLIENTES -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
-  <input id="nomeCliente" placeholder="Nome do cliente">
+  <input id="nomeCliente" placeholder="Nome">
   <select id="planoCliente"></select>
   <button onclick="salvarCliente()">Salvar Cliente</button>
   <ul id="listaClientes"></ul>
@@ -82,21 +80,10 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <h2>Planos</h2>
   <input id="nomePlano" placeholder="Nome do plano">
   <input type="number" id="valorPlano" placeholder="Valor mensal">
-  <input type="number" id="qtdPlano" placeholder="Qtd de procedimentos">
-  <input id="tipoPlano" placeholder="Tipo do serviço (ex: Corte)">
+  <input type="number" id="qtdPlano" placeholder="Qtd procedimentos">
+  <input id="tipoPlano" placeholder="Tipo (ex: Corte)">
   <button onclick="salvarPlano()">Salvar Plano</button>
   <ul id="listaPlanos"></ul>
-</div>
-
-<!-- AGENDA -->
-<div id="agenda" class="section">
-  <h2>Agenda</h2>
-  <input type="date" id="dataAgenda">
-  <input type="time" id="horaAgenda">
-  <input id="clienteAgenda" placeholder="Cliente">
-  <input id="servicoAgenda" placeholder="Serviço">
-  <button onclick="salvarAgenda()">Salvar</button>
-  <ul id="listaAgenda"></ul>
 </div>
 
 <!-- ESTOQUE -->
@@ -115,18 +102,19 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 <!-- DESPESAS -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
-  <input id="descDespesa" placeholder="Descrição (Aluguel, Funcionário)">
+  <input id="descDespesa" placeholder="Descrição">
   <input type="number" id="valorDespesa" placeholder="Valor">
-  <input type="date" id="dataDespesa">
-  <button onclick="salvarDespesa()">Salvar Despesa</button>
+  <button onclick="salvarDespesa()">Salvar</button>
   <ul id="listaDespesas"></ul>
 </div>
 
-<!-- HISTÓRICO -->
-<div id="historico" class="section">
+<!-- FINANCEIRO -->
+<div id="financeiro" class="section">
   <h2>Financeiro</h2>
-  <button onclick="pdfComparativoMensal()">📊 PDF Comparativo Mensal</button>
-  <ul id="listaHistorico"></ul>
+  <p>Faturamento: R$ <span id="fat"></span></p>
+  <p>Despesas: R$ <span id="desp"></span></p>
+  <p class="total">Lucro: R$ <span id="lucro"></span></p>
+  <button onclick="pdfFinanceiro()">📄 PDF Financeiro</button>
 </div>
 
 </div>
@@ -134,7 +122,8 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 
 <script>
 const db = JSON.parse(localStorage.getItem("db")) || {
-  clientes:[], planos:[], produtos:[], vendas:[], agenda:[], despesas:[]
+  clientes:[], planos:[], produtos:[], vendas:[], despesas:[],
+  caixa:{aberto:false, abertura:0}
 };
 let carrinho=[];
 
@@ -146,29 +135,32 @@ function render(){
   produto.innerHTML=db.produtos.map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");
   planoCliente.innerHTML=`<option value="">Sem plano</option>`+db.planos.map(p=>`<option>${p.nome}</option>`).join("");
 
-  listaClientes.innerHTML=db.clientes.map(c=>`<li>${c.nome} | Plano: ${c.plano||"Nenhum"} | Saldo: ${c.saldoPlano||0}</li>`).join("");
+  listaClientes.innerHTML=db.clientes.map(c=>`<li>${c.nome} | Plano:${c.plano||"-"} | Saldo:${c.saldo||0}</li>`).join("");
   listaPlanos.innerHTML=db.planos.map(p=>`<li>${p.nome} (${p.qtd} ${p.tipo})</li>`).join("");
   listaEstoque.innerHTML=db.produtos.map(p=>`<li>${p.nome} (${p.tipo})</li>`).join("");
-  listaAgenda.innerHTML=db.agenda.map(a=>`<li>${a.data} ${a.hora} - ${a.cliente}</li>`).join("");
-  listaDespesas.innerHTML=db.despesas.map(d=>`<li>${d.data} - ${d.descricao} R$ ${d.valor}</li>`).join("");
-  listaHistorico.innerHTML=db.vendas.map(v=>`<li>${v.data} - R$ ${v.total}</li>`).join("");
+  listaDespesas.innerHTML=db.despesas.map(d=>`<li>${d.desc} R$ ${d.valor}</li>`).join("");
+
+  statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
   carrinhoRender();
+  financeiroRender();
 }
 
 function carrinhoRender(){
-  let html="<tr><th>Item</th><th>Valor</th></tr>"; let soma=0;
-  carrinho.forEach(i=>{html+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;soma+=i.valor});
-  carrinho.innerHTML=html; document.getElementById("carrinho").innerHTML=html;
-  total.innerText=soma.toFixed(2);
+  let h="<tr><th>Item</th><th>Valor</th></tr>"; let t=0;
+  carrinho.forEach(i=>{h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor}</td></tr>`;t+=i.valor});
+  carrinho.innerHTML=h; document.getElementById("carrinho").innerHTML=h;
+  total.innerText=t.toFixed(2);
 }
 
 function addCarrinho(){
+  if(!db.caixa.aberto) return alert("Abra o caixa");
   const [nome,valor,tipo]=produto.value.split("|");
   const cli=db.clientes.find(c=>c.nome===cliente.value);
-  if(cli && cli.plano && tipo==="servico" && cli.saldoPlano>0 && nome.toLowerCase().includes(cli.tipoPlano.toLowerCase())){
-    cli.saldoPlano--; save(); render(); alert("Plano usado. Saldo: "+cli.saldoPlano); return;
+  if(cli && cli.plano && tipo==="servico" && cli.saldo>0){
+    cli.saldo--; save(); alert("Plano usado. Saldo:"+cli.saldo); return;
   }
-  carrinho.push({nome,valor:Number(valor)}); carrinhoRender();
+  carrinho.push({nome,valor:Number(valor)});
+  carrinhoRender();
 }
 
 function finalizarVenda(){
@@ -177,39 +169,41 @@ function finalizarVenda(){
   carrinho=[]; save(); render();
 }
 
-function salvarCliente(){
-  const plano=db.planos.find(p=>p.nome===planoCliente.value);
-  db.clientes.push({nome:nomeCliente.value,plano:plano?plano.nome:null,saldoPlano:plano?plano.qtd:0,tipoPlano:plano?plano.tipo:null});
-  save(); render();
-}
+function abrirCaixa(){db.caixa.aberto=true;db.caixa.abertura=Number(prompt("Valor abertura"));save();render();}
+function fecharCaixa(){db.caixa.aberto=false;save();render();}
 
+function salvarCliente(){
+  const p=db.planos.find(x=>x.nome===planoCliente.value);
+  db.clientes.push({nome:nomeCliente.value,plano:p?p.nome:null,saldo:p?p.qtd:0});
+  save();render();
+}
 function salvarPlano(){db.planos.push({nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value});save();render();}
 function salvarProduto(){db.produtos.push({nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value});save();render();}
-function salvarAgenda(){db.agenda.push({data:dataAgenda.value,hora:horaAgenda.value,cliente:clienteAgenda.value,servico:servicoAgenda.value});save();render();}
-function salvarDespesa(){db.despesas.push({descricao:descDespesa.value,valor:+valorDespesa.value,data:dataDespesa.value});save();render();}
+function salvarDespesa(){db.despesas.push({desc:descDespesa.value,valor:+valorDespesa.value});save();render();}
 
-function compararMeses(){
-  const hoje=new Date(); let atual=0,anterior=0;
-  db.vendas.forEach(v=>{
-    const d=new Date(v.data);
-    if(d.getMonth()===hoje.getMonth()) atual+=v.total;
-    if(d.getMonth()===hoje.getMonth()-1) anterior+=v.total;
-  });
-  return {atual,anterior,dif:atual-anterior};
+function financeiroRender(){
+  const fat=db.vendas.reduce((s,v)=>s+v.total,0);
+  const desp=db.despesas.reduce((s,d)=>s+d.valor,0);
+  fatSpan=document.getElementById("fat");
+  despSpan=document.getElementById("desp");
+  lucroSpan=document.getElementById("lucro");
+  fatSpan.innerText=fat.toFixed(2);
+  despSpan.innerText=desp.toFixed(2);
+  lucroSpan.innerText=(fat-desp).toFixed(2);
+  lucroSpan.className=(fat-desp)<0?"negativo":"";
 }
 
-function pdfComparativoMensal(){
-  const {jsPDF}=window.jspdf; const pdf=new jsPDF();
-  const c=compararMeses();
-  pdf.text("COMPARATIVO MENSAL",10,10);
-  pdf.text("Mês atual: R$ "+c.atual.toFixed(2),10,25);
-  pdf.text("Mês anterior: R$ "+c.anterior.toFixed(2),10,35);
-  pdf.text("Diferença: R$ "+c.dif.toFixed(2),10,45);
-  pdf.save("comparativo-mensal.pdf");
+function pdfFinanceiro(){
+  const {jsPDF}=window.jspdf;
+  const pdf=new jsPDF();
+  const fat=db.vendas.reduce((s,v)=>s+v.total,0);
+  const desp=db.despesas.reduce((s,d)=>s+d.valor,0);
+  pdf.text("RELATÓRIO FINANCEIRO",10,10);
+  pdf.text("Faturamento: R$ "+fat.toFixed(2),10,25);
+  pdf.text("Despesas: R$ "+desp.toFixed(2),10,35);
+  pdf.text("Lucro: R$ "+(fat-desp).toFixed(2),10,45);
+  pdf.save("financeiro.pdf");
 }
-
-function filtrarClientes(t){cliente.innerHTML=db.clientes.filter(c=>c.nome.toLowerCase().includes(t.toLowerCase())).map(c=>`<option>${c.nome}</option>`).join("");}
-function filtrarProdutos(t){produto.innerHTML=db.produtos.filter(p=>p.nome.toLowerCase().includes(t.toLowerCase())).map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");}
 
 render();
 </script>
