--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>PDV Barbearia</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
 body{
@@ -38,7 +37,6 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 <body>
 <div class="overlay">
 
-<!-- MENU -->
 <div class="menu">
   <button onclick="show('pdv')">💈</button>
   <button onclick="show('clientes')">👤</button>
@@ -50,7 +48,6 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 
 <div class="content">
 
-<!-- PDV -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -63,11 +60,10 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <p class="total">Total: R$ <span id="total">0.00</span></p>
 
   <button onclick="finalizarVenda()">Finalizar Venda</button>
-  <button onclick="abrirCaixa()">🔓 Abrir Caixa</button>
-  <button onclick="fecharCaixa()">🔒 Fechar Caixa</button>
+  <button onclick="abrirCaixa()">Abrir Caixa</button>
+  <button onclick="fecharCaixa()">Fechar Caixa</button>
 </div>
 
-<!-- CLIENTES -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
   <input id="nomeCliente" placeholder="Nome">
@@ -76,22 +72,20 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <ul id="listaClientes"></ul>
 </div>
 
-<!-- PLANOS -->
 <div id="planos" class="section">
   <h2>Planos</h2>
-  <input id="nomePlano" placeholder="Nome do plano">
-  <input type="number" id="valorPlano" placeholder="Valor mensal">
-  <input type="number" id="qtdPlano" placeholder="Qtd procedimentos">
+  <input id="nomePlano" placeholder="Nome">
+  <input id="valorPlano" type="number" placeholder="Valor">
+  <input id="qtdPlano" type="number" placeholder="Qtd">
   <input id="tipoPlano" placeholder="Tipo (ex: corte)">
   <button onclick="salvarPlano()">Salvar Plano</button>
   <ul id="listaPlanos"></ul>
 </div>
 
-<!-- ESTOQUE -->
 <div id="estoque" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
-  <input type="number" id="valorProd" placeholder="Valor">
+  <input id="valorProd" type="number" placeholder="Valor">
   <select id="tipoProd">
     <option value="servico">Serviço</option>
     <option value="produto">Produto</option>
@@ -100,21 +94,19 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <ul id="listaEstoque"></ul>
 </div>
 
-<!-- DESPESAS -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
-  <input type="number" id="valorDespesa" placeholder="Valor">
+  <input id="valorDespesa" type="number" placeholder="Valor">
   <button onclick="salvarDespesa()">Salvar</button>
   <ul id="listaDespesas"></ul>
 </div>
 
-<!-- FINANCEIRO -->
 <div id="financeiro" class="section">
   <h2>Financeiro</h2>
-  <p>Faturamento: R$ <span id="fat"></span></p>
-  <p>Despesas: R$ <span id="desp"></span></p>
-  <p class="total">Lucro: R$ <span id="lucro"></span></p>
+  <p>Faturamento: R$ <span id="fatVal">0.00</span></p>
+  <p>Despesas: R$ <span id="despVal">0.00</span></p>
+  <p class="total">Lucro: R$ <span id="lucroVal">0.00</span></p>
 </div>
 
 </div>
@@ -125,10 +117,9 @@ const db = JSON.parse(localStorage.getItem("db")) || {
   clientes:[], planos:[], produtos:[], vendas:[], despesas:[],
   caixa:{aberto:false, abertura:0}
 };
-
 let carrinho=[];
 
-function save(){localStorage.setItem("db",JSON.stringify(db));}
+function save(){ localStorage.setItem("db", JSON.stringify(db)); }
 
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
@@ -137,130 +128,77 @@ function show(id){
 }
 
 function render(){
-  cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
-  produto.innerHTML=db.produtos.map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");
-  planoCliente.innerHTML=`<option value="">Sem plano</option>`+db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+  document.getElementById("statusCaixa").innerText =
+    db.caixa.aberto ? "🟢 Caixa aberto" : "🔴 Caixa fechado";
 
-  listaClientes.innerHTML=db.clientes.map(c =>
-    `<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo??0}</li>`
-  ).join("");
+  cliente.innerHTML = db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
+  produto.innerHTML = db.produtos.map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");
+  planoCliente.innerHTML = `<option value="">Sem plano</option>` +
+    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
 
-  listaPlanos.innerHTML=db.planos.map(p=>`<li>${p.nome} (${p.qtd} ${p.tipo})</li>`).join("");
-  listaEstoque.innerHTML=db.produtos.map(p=>`<li>${p.nome} (${p.tipo})</li>`).join("");
-  listaDespesas.innerHTML=db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor}</li>`).join("");
+  if(listaClientes)
+    listaClientes.innerHTML = db.clientes.map(c=>`<li>${c.nome} | Saldo: ${c.saldo||0}</li>`).join("");
 
-  statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
+  if(listaPlanos)
+    listaPlanos.innerHTML = db.planos.map(p=>`<li>${p.nome}</li>`).join("");
+
+  if(listaEstoque)
+    listaEstoque.innerHTML = db.produtos.map(p=>`<li>${p.nome}</li>`).join("");
+
+  if(listaDespesas)
+    listaDespesas.innerHTML = db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor}</li>`).join("");
 
   carrinhoRender();
   financeiroRender();
 }
 
 function carrinhoRender(){
-  let h="<tr><th>Item</th><th>Valor</th></tr>"; let t=0;
+  let html="<tr><th>Item</th><th>Valor</th></tr>";
+  let soma=0;
   carrinho.forEach(i=>{
-    h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
-    t+=i.valor;
+    html+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
+    soma+=i.valor;
   });
-  document.getElementById("carrinho").innerHTML=h;
-  total.innerText=t.toFixed(2);
+  carrinho.innerHTML = html;
+  total.innerText = soma.toFixed(2);
 }
 
-/* 🔥 CORREÇÃO DEFINITIVA DO PLANO */
 function addCarrinho(){
-  if(!db.caixa.aberto){
-    alert("Abra o caixa");
-    return;
-  }
-
-  const [nome, valor, tipo] = produto.value.split("|");
-  const cli = db.clientes.find(c => c.nome === cliente.value);
-
-  if(cli && cli.plano && tipo==="servico"){
-    const serv = nome.toLowerCase();
-    if(cli.saldo>0 && cli.tipoPlano && serv.includes(cli.tipoPlano)){
-      cli.saldo -= 1;
-      save();
-      render();
-      alert("Plano utilizado. Saldo restante: "+cli.saldo);
-      return;
-    }
-  }
-
+  if(!db.caixa.aberto) return alert("Abra o caixa");
+  const [nome,valor,tipo] = produto.value.split("|");
   carrinho.push({nome, valor:Number(valor)});
   carrinhoRender();
 }
 
 function finalizarVenda(){
-  const totalVenda=carrinho.reduce((s,i)=>s+i.valor,0);
-  db.vendas.push({data:new Date().toISOString(),total:totalVenda});
+  const totalVenda = carrinho.reduce((s,i)=>s+i.valor,0);
+  db.vendas.push({data:new Date().toISOString(), total:totalVenda});
   carrinho=[];
-  save();
-  render();
+  save(); render();
 }
 
 function abrirCaixa(){
   db.caixa.aberto=true;
-  db.caixa.abertura=Number(prompt("Valor de abertura"));
-  save();
-  render();
+  db.caixa.abertura=Number(prompt("Valor abertura"));
+  save(); render();
 }
-
-function fecharCaixa(){
-  db.caixa.aberto=false;
-  save();
-  render();
-}
+function fecharCaixa(){ db.caixa.aberto=false; save(); render(); }
 
 function salvarCliente(){
-  const p=db.planos.find(x=>x.nome===planoCliente.value);
-  db.clientes.push({
-    nome:nomeCliente.value,
-    plano:p?p.nome:null,
-    saldo:p?Number(p.qtd):0,
-    tipoPlano:p?p.tipo.toLowerCase():null
-  });
-  save();
-  render();
+  db.clientes.push({nome:nomeCliente.value, saldo:0});
+  save(); render();
 }
-
-function salvarPlano(){
-  db.planos.push({
-    nome:nomePlano.value,
-    valor:+valorPlano.value,
-    qtd:+qtdPlano.value,
-    tipo:tipoPlano.value.toLowerCase()
-  });
-  save();
-  render();
-}
-
-function salvarProduto(){
-  db.produtos.push({
-    nome:nomeProd.value,
-    valor:+valorProd.value,
-    tipo:tipoProd.value
-  });
-  save();
-  render();
-}
-
-function salvarDespesa(){
-  db.despesas.push({
-    desc:descDespesa.value,
-    valor:+valorDespesa.value
-  });
-  save();
-  render();
-}
+function salvarPlano(){ db.planos.push({nome:nomePlano.value}); save(); render(); }
+function salvarProduto(){ db.produtos.push({nome:nomeProd.value, valor:+valorProd.value, tipo:tipoProd.value}); save(); render(); }
+function salvarDespesa(){ db.despesas.push({desc:descDespesa.value, valor:+valorDespesa.value}); save(); render(); }
 
 function financeiroRender(){
-  const fat=db.vendas.reduce((s,v)=>s+v.total,0);
-  const desp=db.despesas.reduce((s,d)=>s+d.valor,0);
-  fat.innerText=fat.toFixed(2);
-  desp.innerText=desp.toFixed(2);
-  lucro.innerText=(fat-desp).toFixed(2);
+  const faturamento = db.vendas.reduce((s,v)=>s+v.total,0);
+  const despesas = db.despesas.reduce((s,d)=>s+d.valor,0);
+  fatVal.innerText = faturamento.toFixed(2);
+  despVal.innerText = despesas.toFixed(2);
+  lucroVal.innerText = (faturamento-despesas).toFixed(2);
 }
-
 render();
 </script>
 
