--- a/index.html
+++ b/index.html
@@ -9,48 +9,48 @@
 body{
   margin:0;
   font-family:Arial,Helvetica,sans-serif;
-  background:#111;
-  color:#fff;
+  background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");
+  background-size:cover;
+  background-position:center;
 }
+.overlay{background:rgba(0,0,0,.65);min-height:100vh;}
 .menu{
-  display:flex;
-  gap:10px;
-  padding:10px;
-  background:#000;
+  position:fixed;left:0;top:0;bottom:0;width:70px;
+  background:rgba(0,0,0,.35);
+  display:flex;flex-direction:column;align-items:center;padding-top:20px;
 }
 .menu button{
-  background:#222;
-  border:none;
-  color:#fff;
-  padding:10px;
-  cursor:pointer;
+  background:none;border:none;color:#f1c40f;font-size:22px;
+  margin:15px 0;cursor:pointer;
 }
-.section{display:none;padding:15px}
+.content{margin-left:90px;padding:20px;color:#fff;}
+.section{display:none}
 .section.active{display:block}
-input,select,button{
-  padding:8px;
-  margin:4px 0;
-}
+input,select,button{padding:8px;border-radius:6px;border:none;margin:4px 0}
+button{cursor:pointer;font-weight:bold}
 table{width:100%;border-collapse:collapse}
-td,th{border-bottom:1px solid #333;padding:6px}
-.total{font-size:20px;color:#2ecc71}
+th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
+.total{font-size:22px;color:#2ecc71}
 </style>
 </head>
 
 <body>
+<div class="overlay">
 
 <div class="menu">
-  <button onclick="show('pdv')">PDV</button>
-  <button onclick="show('clientes')">Clientes</button>
-  <button onclick="show('planos')">Planos</button>
-  <button onclick="show('produtos')">Produtos</button>
-  <button onclick="show('despesas')">Despesas</button>
-  <button onclick="show('financeiro')">Financeiro</button>
+  <button onclick="show('pdv')">💈</button>
+  <button onclick="show('clientes')">👤</button>
+  <button onclick="show('planos')">💳</button>
+  <button onclick="show('produtos')">📦</button>
+  <button onclick="show('despesas')">🧾</button>
+  <button onclick="show('financeiro')">📊</button>
 </div>
+
+<div class="content">
 
 <!-- PDV -->
 <div id="pdv" class="section active">
-  <h2>PDV</h2>
+  <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
 
   <select id="cliente"></select>
@@ -68,23 +68,24 @@ td,th{border-bottom:1px solid #333;padding:6px}
 <!-- CLIENTES -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
-  <input id="nomeCliente" placeholder="Nome">
+  <input id="nomeCliente" placeholder="Nome do cliente">
   <select id="planoCliente"></select>
-  <button onclick="salvarCliente()">Salvar</button>
+  <button onclick="salvarCliente()">Salvar Cliente</button>
   <ul id="listaClientes"></ul>
 </div>
 
 <!-- PLANOS -->
 <div id="planos" class="section">
   <h2>Planos</h2>
-  <input id="nomePlano" placeholder="Nome">
-  <input id="qtdPlano" type="number" placeholder="Qtd procedimentos">
-  <input id="tipoPlano" placeholder="Tipo serviço (ex: corte)">
-  <button onclick="salvarPlano()">Salvar</button>
+  <input id="nomePlano" placeholder="Nome do plano">
+  <input id="valorPlano" type="number" placeholder="Valor do plano">
+  <input id="qtdPlano" type="number" placeholder="Qtd de procedimentos">
+  <input id="tipoPlano" placeholder="Tipo do serviço (ex: corte)">
+  <button onclick="salvarPlano()">Salvar Plano</button>
   <ul id="listaPlanos"></ul>
 </div>
 
-<!-- PRODUTOS -->
+<!-- PRODUTOS / SERVIÇOS -->
 <div id="produtos" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
@@ -114,6 +115,9 @@ td,th{border-bottom:1px solid #333;padding:6px}
   <p class="total">Lucro: R$ <span id="lucro"></span></p>
 </div>
 
+</div>
+</div>
+
 <script>
 const db = JSON.parse(localStorage.getItem("db")) || {
   clientes:[],
@@ -126,7 +130,7 @@ const db = JSON.parse(localStorage.getItem("db")) || {
 
 let carrinho=[];
 
-function save(){ localStorage.setItem("db",JSON.stringify(db)); }
+function save(){ localStorage.setItem("db", JSON.stringify(db)); }
 
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
@@ -135,27 +139,43 @@ function show(id){
 }
 
 function render(){
-  statusCaixa.innerText = db.caixa.aberto ? "Caixa aberto" : "Caixa fechado";
+  statusCaixa.innerText = db.caixa.aberto ? "🟢 Caixa aberto" : "🔴 Caixa fechado";
 
   cliente.innerHTML = db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
   produto.innerHTML = db.produtos.map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");
-  planoCliente.innerHTML = `<option value="">Sem plano</option>` + db.planos.map(p=>`<option>${p.nome}</option>`).join("");
 
-  listaClientes.innerHTML = db.clientes.map(c=>`<li>${c.nome} | Saldo: ${c.saldo||0}</li>`).join("");
-  listaPlanos.innerHTML = db.planos.map(p=>`<li>${p.nome} (${p.qtd} ${p.tipo})</li>`).join("");
-  listaProdutos.innerHTML = db.produtos.map(p=>`<li>${p.nome} (${p.tipo})</li>`).join("");
-  listaDespesas.innerHTML = db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor}</li>`).join("");
+  planoCliente.innerHTML = `<option value="">Sem plano</option>` +
+    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+
+  listaClientes.innerHTML = db.clientes.map(c =>
+    `<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo||0}</li>`
+  ).join("");
+
+  listaPlanos.innerHTML = db.planos.map(p =>
+    `<li>${p.nome} - R$ ${p.valor} (${p.qtd}x ${p.tipo})</li>`
+  ).join("");
+
+  listaProdutos.innerHTML = db.produtos.map(p =>
+    `<li>${p.nome} (${p.tipo})</li>`
+  ).join("");
+
+  listaDespesas.innerHTML = db.despesas.map(d =>
+    `<li>${d.desc} - R$ ${d.valor}</li>`
+  ).join("");
 
   carrinhoRender();
   financeiroRender();
 }
 
 function carrinhoRender(){
-  let h="<tr><th>Item</th><th>Valor</th></tr>";
-  let t=0;
-  carrinho.forEach(i=>{ h+=`<tr><td>${i.nome}</td><td>${i.valor}</td></tr>`; t+=i.valor; });
-  carrinho.innerHTML=h;
-  total.innerText=t.toFixed(2);
+  let html="<tr><th>Item</th><th>Valor</th></tr>";
+  let soma=0;
+  carrinho.forEach(i=>{
+    html+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
+    soma+=i.valor;
+  });
+  carrinho.innerHTML=html;
+  total.innerText=soma.toFixed(2);
 }
 
 function abrirCaixa(){ db.caixa.aberto=true; save(); render(); }
@@ -163,40 +183,86 @@ function fecharCaixa(){ db.caixa.aberto=false; save(); render(); }
 
 function addItem(){
   if(!db.caixa.aberto) return alert("Abra o caixa");
+
   const [nome,valor,tipo]=produto.value.split("|");
   const cli=db.clientes.find(c=>c.nome===cliente.value);
 
   if(cli && cli.plano && tipo==="servico" && cli.saldo>0){
-    cli.saldo--; save(); render();
-    alert("Plano usado. Saldo: "+cli.saldo);
+    cli.saldo--;
+    save();
+    alert("Plano utilizado. Saldo: "+cli.saldo);
+    render();
     return;
   }
+
   carrinho.push({nome,valor:Number(valor)});
   carrinhoRender();
 }
 
 function finalizarVenda(){
+  if(carrinho.length===0) return;
   const totalVenda=carrinho.reduce((s,i)=>s+i.valor,0);
-  db.vendas.push({total:totalVenda,data:new Date().toISOString()});
-  carrinho=[]; save(); render();
+  db.vendas.push({data:new Date().toISOString(),total:totalVenda});
+  carrinho=[];
+  save();
+  render();
 }
 
 function salvarCliente(){
-  const p=db.planos.find(p=>p.nome===planoCliente.value);
-  db.clientes.push({nome:nomeCliente.value,plano:p?p.nome:null,saldo:p?p.qtd:0});
-  save(); render();
+  const plano=db.planos.find(p=>p.nome===planoCliente.value);
+  db.clientes.push({
+    nome:nomeCliente.value,
+    plano:plano?plano.nome:null,
+    saldo:plano?plano.qtd:0
+  });
+
+  if(plano){
+    db.vendas.push({
+      data:new Date().toISOString(),
+      total:plano.valor
+    });
+  }
+
+  save();
+  render();
 }
 
-function salvarPlano(){ db.planos.push({nome:nomePlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value}); save(); render(); }
-function salvarProduto(){ db.produtos.push({nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value}); save(); render(); }
-function salvarDespesa(){ db.despesas.push({desc:descDespesa.value,valor:+valorDespesa.value}); save(); render(); }
+function salvarPlano(){
+  db.planos.push({
+    nome:nomePlano.value,
+    valor:Number(valorPlano.value),
+    qtd:Number(qtdPlano.value),
+    tipo:tipoPlano.value.toLowerCase()
+  });
+  save();
+  render();
+}
+
+function salvarProduto(){
+  db.produtos.push({
+    nome:nomeProd.value,
+    valor:Number(valorProd.value),
+    tipo:tipoProd.value
+  });
+  save();
+  render();
+}
+
+function salvarDespesa(){
+  db.despesas.push({
+    desc:descDespesa.value,
+    valor:Number(valorDespesa.value)
+  });
+  save();
+  render();
+}
 
 function financeiroRender(){
-  const fat=db.vendas.reduce((s,v)=>s+v.total,0);
-  const desp=db.despesas.reduce((s,d)=>s+d.valor,0);
-  fat.innerText=fat.toFixed(2);
-  desp.innerText=desp.toFixed(2);
-  lucro.innerText=(fat-desp).toFixed(2);
+  const faturamento=db.vendas.reduce((s,v)=>s+v.total,0);
+  const despesas=db.despesas.reduce((s,d)=>s+d.valor,0);
+  fat.innerText=faturamento.toFixed(2);
+  desp.innerText=despesas.toFixed(2);
+  lucro.innerText=(faturamento-despesas).toFixed(2);
 }
 
 render();
