--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 
 <div class="content">
 
+<!-- PDV -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -64,14 +65,16 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <button onclick="fecharCaixa()">Fechar Caixa</button>
 </div>
 
+<!-- CLIENTES -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
-  <input id="nomeCliente" placeholder="Nome">
+  <input id="nomeCliente" placeholder="Nome do cliente">
   <select id="planoCliente"></select>
   <button onclick="salvarCliente()">Salvar Cliente</button>
   <ul id="listaClientes"></ul>
 </div>
 
+<!-- PLANOS -->
 <div id="planos" class="section">
   <h2>Planos</h2>
   <input id="nomePlano" placeholder="Nome do plano">
@@ -82,6 +85,7 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <ul id="listaPlanos"></ul>
 </div>
 
+<!-- PRODUTOS -->
 <div id="produtos" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
@@ -94,6 +98,7 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <ul id="listaProdutos"></ul>
 </div>
 
+<!-- DESPESAS -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
@@ -102,6 +107,7 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <ul id="listaDespesas"></ul>
 </div>
 
+<!-- FINANCEIRO -->
 <div id="financeiro" class="section">
   <h2>Financeiro</h2>
   <p>Faturamento: R$ <span id="fat"></span></p>
@@ -113,23 +119,22 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 </div>
 
 <script>
-const defaultDB = {
-  clientes:[],
-  planos:[],
-  produtos:[],
-  vendas:[],
-  despesas:[],
-  caixa:{aberto:false}
+// ===== DB BLINDADO =====
+const rawDB = JSON.parse(localStorage.getItem("db") || "{}");
+const db = {
+  clientes: Array.isArray(rawDB.clientes) ? rawDB.clientes : [],
+  planos: Array.isArray(rawDB.planos) ? rawDB.planos : [],
+  produtos: Array.isArray(rawDB.produtos) ? rawDB.produtos : [],
+  vendas: Array.isArray(rawDB.vendas) ? rawDB.vendas : [],
+  despesas: Array.isArray(rawDB.despesas) ? rawDB.despesas : [],
+  caixa: rawDB.caixa || { aberto:false }
 };
 
-const db = Object.assign(
-  defaultDB,
-  JSON.parse(localStorage.getItem("db") || "{}")
-);
+let carrinho = [];
 
-let carrinho=[];
-
-function save(){ localStorage.setItem("db", JSON.stringify(db)); }
+function save(){
+  localStorage.setItem("db", JSON.stringify(db));
+}
 
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
@@ -137,45 +142,38 @@ function show(id){
   render();
 }
 
+// ===== RENDER SEGURO =====
 function render(){
-  if(statusCaixa)
-    statusCaixa.innerText = db.caixa.aberto ? "🟢 Caixa aberto" : "🔴 Caixa fechado";
+  statusCaixa.innerText = db.caixa.aberto ? "🟢 Caixa aberto" : "🔴 Caixa fechado";
 
-  if(cliente)
-    cliente.innerHTML = db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
+  cliente.innerHTML = db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
+  produto.innerHTML = db.produtos.map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");
 
-  if(produto)
-    produto.innerHTML = db.produtos.map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");
+  planoCliente.innerHTML =
+    `<option value="">Sem plano</option>` +
+    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
 
-  if(planoCliente)
-    planoCliente.innerHTML =
-      `<option value="">Sem plano</option>` +
-      db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+  listaClientes.innerHTML = db.clientes.map(c =>
+    `<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo||0}</li>`
+  ).join("");
 
-  if(listaClientes)
-    listaClientes.innerHTML = db.clientes.map(c =>
-      `<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo||0}</li>`
-    ).join("");
+  listaPlanos.innerHTML = db.planos.map(p =>
+    `<li>${p.nome} - R$ ${p.valor} (${p.qtd}x ${p.tipo})</li>`
+  ).join("");
 
-  if(listaPlanos)
-    listaPlanos.innerHTML = db.planos.map(p =>
-      `<li>${p.nome} - R$ ${p.valor} (${p.qtd}x ${p.tipo})</li>`
-    ).join("");
+  listaProdutos.innerHTML = db.produtos.map(p =>
+    `<li>${p.nome} (${p.tipo})</li>`
+  ).join("");
 
-  if(listaProdutos)
-    listaProdutos.innerHTML = db.produtos.map(p =>
-      `<li>${p.nome} (${p.tipo})</li>`
-    ).join("");
-
-  if(listaDespesas)
-    listaDespesas.innerHTML = db.despesas.map(d =>
-      `<li>${d.desc} - R$ ${d.valor}</li>`
-    ).join("");
+  listaDespesas.innerHTML = db.despesas.map(d =>
+    `<li>${d.desc} - R$ ${d.valor}</li>`
+  ).join("");
 
   carrinhoRender();
   financeiroRender();
 }
 
+// ===== CARRINHO =====
 function carrinhoRender(){
   let html="<tr><th>Item</th><th>Valor</th></tr>";
   let soma=0;
@@ -187,9 +185,11 @@ function carrinhoRender(){
   total.innerText=soma.toFixed(2);
 }
 
+// ===== CAIXA =====
 function abrirCaixa(){ db.caixa.aberto=true; save(); render(); }
 function fecharCaixa(){ db.caixa.aberto=false; save(); render(); }
 
+// ===== PDV =====
 function addItem(){
   if(!db.caixa.aberto) return alert("Abra o caixa");
 
@@ -217,6 +217,7 @@ function finalizarVenda(){
   render();
 }
 
+// ===== CADASTROS =====
 function salvarCliente(){
   const plano = db.planos.find(p=>p.nome===planoCliente.value);
   db.clientes.push({
@@ -226,10 +227,7 @@ function salvarCliente(){
   });
 
   if(plano){
-    db.vendas.push({
-      data:new Date().toISOString(),
-      total:plano.valor
-    });
+    db.vendas.push({data:new Date().toISOString(), total:plano.valor});
   }
 
   save();
@@ -266,9 +264,10 @@ function salvarDespesa(){
   render();
 }
 
+// ===== FINANCEIRO =====
 function financeiroRender(){
-  const faturamento=db.vendas.reduce((s,v)=>s+v.total,0);
-  const despesas=db.despesas.reduce((s,d)=>s+d.valor,0);
+  const faturamento = db.vendas.reduce((s,v)=>s+v.total,0);
+  const despesas = db.despesas.reduce((s,d)=>s+d.valor,0);
   fat.innerText=faturamento.toFixed(2);
   desp.innerText=despesas.toFixed(2);
   lucro.innerText=(faturamento-despesas).toFixed(2);
